// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontTileSummary renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="Three Conservative MPs resign Three Conservative MPs resign"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`FrontTileSummary renders with keyline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="Three Conservative MPs resign Three Conservative MPs resign"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
      showKeyline={true}
    />
  </View>
</View>
`;

exports[`FrontTileSummary renders with more than 1 columns 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="Three Conservative MPs resign Three Conservative MPs resign"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  />
</View>
`;

exports[`FrontTileSummary renders without byline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="Three Conservative MPs resign Three Conservative MPs resign"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  />
</View>
`;

exports[`FrontTileSummary renders without strapline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="Three Conservative MPs resign Three Conservative MPs resign"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
</View>
`;
